src/parser-cat.cc doesn't compile with clang
Here are error messages:
parser-cat.cc:671:34: error: non-constant-expression cannot be narrowed from type 'gboolean' (aka 'int') to 'bool' in initializer list [-Wc++11-narrowing]
PrettyPrinter pp{plain, codepoints};
^~~~~
parser-cat.cc:671:34: note: insert an explicit cast to silence this issue
PrettyPrinter pp{plain, codepoints};
^~~~~
static_cast<bool>( )
parser-cat.cc:671:41: error: non-constant-expression cannot be narrowed from type 'gboolean' (aka 'int') to 'bool' in initializer list [-Wc++11-narrowing]
PrettyPrinter pp{plain, codepoints};
^~~~~~~~~~
parser-cat.cc:671:41: note: insert an explicit cast to silence this issue
PrettyPrinter pp{plain, codepoints};
^~~~~~~~~~
static_cast<bool>( )
parser-cat.cc:146:22: warning: private field 'm_plain' is not used [-Wunused-private-field]
bool m_plain;
^
1 warning and 2 errors generated.