parser: cat: Restructure options parsing

Also fixes narrowing error with clang:
https://gitlab.gnome.org/GNOME/vte/issues/58